[tool.poetry]
name = "goit-pythonweb-hw-08"
version = "0.1.0"
description = ""
authors = ["zharuk.alex <zzharuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncio = "^3.4.3"
greenlet = "^3.1.1"
fastapi = { extras = ["standard"], version = "^0.115.5" }
unicorn = { extras = ["standard"], version = "^2.1.1" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
